# ECS275A

./: .gitignore  README.md
Assignments/: image.ppm  prog01.ppm  teapot.ppm
Assignments/code/: Camera.h  Color.h  Group.h  LambertianMaterial.h  Material.h  MetalMaterial.h  Object.h  Plane.cc  Plane.h  Point.h  Polygon.h  Scene.cc  specter.cc
Assignments/code/scenes/: prog012.scn  spiral.scn  test.scn
Assignments/project_1/: Assignment_1_Ahmed_Mahmoud.rar  README.md
Assignments/project_1/code/: Background.cc  (+29 more)
Assignments/project_2/: Project_2_Ahmed_Mahmoud.rar  README.md
Assignments/project_2/code/: CMakeLists.txt  Color.h  Material.h  Object.h  Parser.cc  Parser.h  PhongMaterial.h  Plane.h  Point.h  Polygon.cc  Polygon.h  Primitive.h  Ray.h  Scene.cc  Scene.h  Sphere.cc  Sphere.h  ThinLensCamera.cc  ThinLensCamera.h  Triangle.h  specter.cc
Assignments/project_2/code/scenes/: bunny.scn  prog012.scn  test.scn
FinalProject/: bunny.xlsx
FinalProject/code/: AABBox.h  BVH.h  Background.h  Box.h  Group.cc  Group.h  HitRecord.h  Instance.h  Light.h  Matrix3.h  MetalMaterial.h  Object.cc  Object.h  PLY.h  Parser.cc  Parser.h  PinholeCamera.cc  PinholeCamera.h  Plane.h  Point.h  Polygon.cc  Polygon.h  Ray.h  Scene.cc  ScratchPad.h  Sphere.cc  Sphere.h  Time.cc  Time.h  Triangle.cc  Triangle.h  Vector.h  Vector2.cc  Vector2.h  Vector3.cpp  Vector3.h  specter.cc
FinalProject/cuda/: rayTraceCUDA.cu
FinalProject/presentation/: slides.pptx
FinalProject/proposal/: proposal.tex
FinalProject/writeup/: final.tex
Quiz/quiz1/: quiz.tex
Quiz/quiz2/: quiz.tex
(+77 files in other folders)
